# rep01

./: .gitignore  CLAUDE.md  COMO_FUNCIONA.txt  NOTAS_DA_VERSAO.txt  README.md  bootstrap.ps1  build_exe.py  config.editor-machine.example.yaml  config.example.yaml  create_releases.sh  gui.py  local_transcoder.py  pyproject.toml  requirements.txt  schema.sql  sync_version.py  transcode.py  transcoder_gui.py
.github/workflows/: release.yml
installer/: HeavyDrops_Setup.iss  Install_HeavyDrops.bat  README.txt  apply_worker_profile.py  install.ps1
installer/tasks/: HeavyDropsDaemon.xml
src/transcoder/: __init__.py  api.py  availability.py  census.py  claims.py  config.py  dashboard.html  database.py  disk_budget.py  dispatcher.py  dropbox_client.py  encoder_detect.py  ffmpeg_builder.py  incidents.py  inventory.py  main.py  manifest.json  manifest.py  prober.py  progress.py  rate_limit.py  reorganize.py  scanner.py  self_health.py  telemetry.py  updater.py  utils.py  watchdog.py  workers.py
tests/: __init__.py  conftest.py  test_auto_update.py  test_availability.py  test_claims.py  test_convoy_throttle.py  test_download_resume.py  test_encoder_detect.py  test_ffmpeg_builder.py  test_folder_settled_prproj.py  test_manifest_per_pc.py  test_metadata.py  test_min_size.py  test_not_found_terminal.py  test_path_mapping.py  test_proxies_skip.py  test_relocation_not_found.py  test_settings_api.py  test_smart_retry.py  test_stability.py  test_telemetry.py  test_truncated_transcode.py  test_version_sync.py  test_watchdog_kill.py  test_worker_profile.py  test_youtube_skip.py
