[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heavydrops-transcoder"
version = "5.8.2"
description = "Minimal Dropbox H.264→H.265 transcoder. One file. One loop."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "dropbox>=12.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
transcode = "transcode:main"
