[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heavydrops-transcoder"
version = "6.0.2"
description = "Minimal Dropbox H.264→H.265 transcoder. Daemon + dashboard."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "dropbox>=12.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
# Multi-module CLI the bootstrap installer wires up. `hd` is the short alias;
# `hd-daemon` is the name the Task Scheduler XML invokes; `hd-gui` opens the
# dashboard in the default browser.
hd        = "transcoder.main:main"
hd-daemon = "transcoder.main:main"
hd-gui    = "transcoder.main:gui_main"

[tool.setuptools]
# src-layout: the distributable package lives under src/transcoder/.
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
